melhorias formatter de data, swagger file, e respostas
